<resources>
    <string name="app_name">W3-E1-Intent</string>
    <string name="background">Background</string>
    <string name="back">Back</string>
    <string name="avatar">Avatar</string>

    <string name="crypto_type">Crypto Type</string>
    <string name="my_name">Lê Anh Quốc</string>
    <string name="mail">2050531200262@sv.ute.udn.vn</string>
    <string name="notice">🥇🥉 Failure is not the opposite of success, it\'s part of success. 😎😎</string>
    <string name="total_assets">Total assets</string>
    <string name="money">$200K</string>
    <string name="top_tokens">Top tokens</string>
    <string name="txt_to_btc">~ 4.54387 BTC</string>
    <string name="top_networks">Top networks</string>
    <string name="show_qr">Show QR</string>
    <string name="let_s_message">Let\'s Message</string>
    <string name="bio">Bio:</string>
    <string name="tv_bio">👌👌 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nunc sit amet aliquam luctus, nunc nisl aliquam nisl, eget aliquam nisl nisl sit amet nisl. Sed euismod, nunc sit amet aliquam luctus, nunc nisl aliquam nisl, eget aliquam nisl nisl sit amet nisl. 💀👻👀</string>
    <string name="nft_gallery">NFT gallery:</string>
    <string name="links">Links:</string>
    <string name="cv1">cv1</string>
    <string name="link_social">link social</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Tên tài khoản</string>
    <string name="pass">Mật khẩu</string>
    <string name="forget">Quên mật khẩu?</string>
    <string name="is_has_account">Bạn chưa có tài khoản?</string>
    <string name="signup">Đăng ký</string>
    <string name="is_has_account_yet">Bạn đã có tài khoản?</string>
    <string name="ch_nh_s_ch_v_i_u_kho_n">chính sách và điều khoản</string>
    <string name="okko">Đồng ý với</string>
    <string name="confirm_pass">Nhập lại mật khẩu</string>
    <string name="register_date">You are a registered user since:\n %1$s</string>
    <string name="name">Họ và tên</string>
</resources>